--- a/style/style.css
+++ b/style/style.css
@@ -9,6 +9,7 @@ body{
     padding: 13px;
     width: 14rem;
     background-color: rgb(240, 240, 242);
+    font-size: 12.5px;
 }
 
 #title-section {
