--- a/style/style.css
+++ b/style/style.css
@@ -6,12 +6,14 @@
 }
 
 body{
-    padding: 13px;
+    padding: 13px 13px 7px 13px;
     width: 14rem;
     background-color: rgb(240, 240, 242);
-    font-size: 12px;
+    font-size: 11.7px;
 }
-
+main{
+    margin-bottom: 0.5rem;
+}
 #title-section {
     display: flex;
     align-items:center;
@@ -31,11 +33,19 @@ h1{
 h2{
     color:  rgba(1, 145, 145, 0.70);
 }
+h3{
+    color: rgb(81, 80, 82);
+    font-weight: 200;
+
+}
 p{
     color: rgb(105, 104, 106);
     text-align: center;
 }
-#global-status{
+
+/*Switch Button Style*/
+
+.status{
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -47,13 +57,13 @@ p{
     align-items: center;
 }
 
-#switch {
+.switch {
     height: 0;
     width: 0;
     visibility: hidden;
 }
-
-label {
+/*Main button Style*/
+#main-switch {
     cursor: pointer;
     text-indent: -9999px;
     width: 60px;  
@@ -64,7 +74,7 @@ label {
     position: relative;
 }
 
-label::after {
+#main-switch::after {
     content: '';
     position: absolute;
     top: 2px;  
@@ -76,19 +86,97 @@ label::after {
     transition: 0.2s;
 }
 
-label:hover::after {
+#main-switch:hover::after {
     background: #f4f4f4;
 }
 
-input:checked + label {
+#switch:checked + #main-switch {
     background: #da5557e2;
 }
 
-input:checked + label::after {
+#switch:checked + #main-switch::after {
     left: calc(100% - 2px);
     transform: translateX(-100%);
 }
 
-label:active::after {
+#main-switch:active::after {
     width: 36px;  
+}
+
+/*Smaller Switches*/
+
+.toggle-switch {
+    cursor: pointer;
+    text-indent: -9999px;
+    width: 40px;  
+    height: 20px; 
+    background: rgb(179, 179, 179);
+    display: block;
+    border-radius: 20px;  
+    position: relative;
+}
+
+.toggle-switch::after {
+    content: '';
+    position: absolute;
+    top: 1px;  
+    left: 1px;  
+    width: 18px;  
+    height: 18px; 
+    background: #fff;
+    border-radius: 50%;
+    transition: 0.2s;
+}
+
+.toggle-switch:hover::after {
+    background: #f4f4f4;
+}
+
+.switch:checked + .toggle-switch {
+    background: #da5557e2;
+}
+
+.switch:checked + .toggle-switch::after {
+    left: calc(100% - 1px);
+    transform: translateX(-100%);
+}
+
+.toggle-switch:active::after {
+    width: 26px;
+}
+
+
+/*More Style*/
+
+.switch {
+    height: 0;
+    width: 0;
+    visibility: hidden;
+}
+
+#show-more-input {
+    display: none;
+}
+
+.arrow-label {
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+    margin-right: 10px;
+}
+.arrow-label i{
+    transition: transform 0.2s;
+    margin-right: 4px;
+}
+
+#show-more-input:checked + .arrow-label i {
+    transform: rotate(180deg);
+}
+
+#full-info {
+    display: none;
+}
+
+#show-more-input:checked ~ #full-info {
+    display: block;
 }
