Added an anchor to documentation

--- a/style/style.css
+++ b/style/style.css
@@ -151,7 +151,13 @@ p{
 }
 
 
-/* Style*/
+/* More/Less Style*/
+
+#show-more {
+    display: flex;
+    justify-content: space-between; 
+    align-items: baseline;
+}
 
 .switch {
     height: 0;
@@ -168,6 +174,7 @@ p{
     align-items: center;
     cursor: pointer;
     margin-right: 10px;
+    width: 50%;
 }
 .arrow-label i{
     transition: transform 0.2s;
@@ -188,5 +195,5 @@ p{
 
 #info-section{
     display: none;
+    margin-bottom: 0.6rem;
 }
-
