--- a/style/style.css
+++ b/style/style.css
@@ -37,6 +37,9 @@ h3{
     color: rgb(81, 80, 82);
     font-weight: 400;
 }
+h4{
+    font-weight: 450;
+}
 p{
     color: rgb(105, 104, 106);
     text-align: center;
@@ -195,4 +198,8 @@ p{
 #info-section{
     display: none;
     margin-bottom: 0.6rem;
+}
+
+#version-section{
+    margin-top: 0.5rem;
 }
